# pkg

./: .dockerignore  .gitignore  .luarc.json  CHANGELOG.md  Cargo.toml  Dockerfile.dev  LICENSE  README.md  justfile
.github/workflows/: release.yaml
docs/: user.md
docs/res/: pkg_demo.cast
examples/: read_config.rs  read_inputs.rs  work_with_bridges.rs  work_with_db.rs
examples/assets/bridges/bridge1/: main.lua
examples/assets/bridges/bridge2/: main.lua
examples/assets/bridges/bridge3/: main.lua
examples/assets/inputs/: parse_me.kdl
examples/assets/inputs/dir/: me_two.kdl
examples/docker/: .config.kdl  input.kdl
examples/docker/.bridges/bridge/: install.nu  run
examples/docker/.bridges/bridge1/: run
src/: bridge.rs  cmd.rs  config.rs  db.rs  fs.rs  input.rs  lib.rs  main.rs
src/api/: mod.rs
src/plugin/: mod.rs
src/test/: bridge.rs  db.rs  mod.rs
