[package]
name = "pkg"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = '0.11.2', features = ['vendored', 'lua54', 'async', 'send'] }
miette = { version = "7.6.0", features = ["fancy"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
thiserror = "2.0.15"
kdl = "6.3.4"
clap = { version = "4.5.45", features = ["derive"] }
clap_derive = "4.5.45"
rpassword = "7.4.0"
owo-colors = "4.2.2"
indicatif = "0.18.0"
cli-table = "0.5"

[dev-dependencies]
tempfile = "3.20.0"
