[package]
name = "pkg"
version = "0.2.1"
edition = "2024"
rust-version = "1.89"
description = "A powerful insh'Allah, mutli-language-secriptable, multi-platform, multi-repo yet simple and declarative package manager"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
thiserror = "2.0.15"
kdl = "6.3.4"
clap = { version = "4.5.45", features = ["derive", "color"] }
clap_derive = "4.5.45"
rpassword = "7.4.0"
owo-colors = "4.2.2"
indicatif = "0.18.0"
cli-table = "0.5"

[dev-dependencies]
tempfile = "3.20.0"
