[package]
name = "pkg-rs"
version = "0.2.3"
edition = "2024"
rust-version = "1.92"
description = "A powerful insh'Allah, mutli-language-secriptable, multi-platform, multi-repo yet simple and declarative package manager"
license-file = "LICENSE"
repository = "https://github.com/abdelkadouss/pkg"
keywords = [ "cli", "package", "package-manager", "pkg", "install" ]
categories = [ "command-line-utilities", "development-tools" ]

[[bin]]
name = "pkg"
path = "src/main.rs"

[features]
default = ["cli_complation"]
cli_complation = ["clap_complete", "clap_complete_nushell"]

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
thiserror = "2.0.15"
kdl = "6.3.4"
clap = { version = "4.5.45", features = ["derive", "color"] }
clap_derive = "4.5.45"
clap_complete_nushell = { version = "4.5.10", optional = true }
clap_complete = { version = "4.5.65", optional = true }
rpassword = "7.4.0"
owo-colors = "4.2.2"
indicatif = "0.18.0"
cli-table = "0.5"

[dev-dependencies]
tempfile = "3.20.0"
